# PrisonersDilemma

./: .gitignore  LICENSE  README.md
grill/: .hgignore  meson.build  meson_options.txt
grill/.hg/: dirstate  last-message.txt  undo.backup.dirstate  undo.dirstate
grill/.hg/cache/: branch2-served  manifestfulltextcache  rbc-revs-v1  tags2-visible
grill/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
grill/.hg/store/data/: _l_i_c_e_n_s_e.i  meson.build.i  meson__options.txt.i  ~2ehgignore.i
grill/.hg/store/data/docs/: _u_m_l.png.i  projects.pdf.i  projects.tex.i  rules.md.i
grill/.hg/store/data/include/: client.hpp.i  logging__provider.hpp.i  player.hpp.i  server.hpp.i  strategy.hpp.i
grill/.hg/store/data/src/: includes.cpp.i  main.cpp.i
grill/docs/: documentation.aux  documentation.blg  documentation.tex  documentation.toc  projects.tex  rules.md
grill/docs/_minted-documentation/: 226039E1C9087897F30A0D2E15FBD62B8C1F1CF4D041A969666359359E749F80.pygtex  E39C6BECD324CCAAE2E6FF325F2F5F248C1F1CF4D041A969666359359E749F80.pygtex
grill/documentation/: rules.md
grill/include/: client.hpp  logging_provider.hpp  player.hpp  server.h  server.hpp  strategy.hpp
grill/src/: PrisonersDilemma.proto  includes.cpp
grill/src/PrisonersDilemma_Client/: main.cpp
grill/src/PrisonersDilemma_Server/: main.cpp
grill/src/client/: client.cpp  main.cpp  strategy.cpp
grill/src/server/: main.cpp  server.cpp
grill/src/static/: PrisonersDilemma.proto  client_config.json  config.json  player.cpp  server_config.json
(+10 files in other folders)
